--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "rich-project",
+  "name": "project",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
     "production": "pm2 start ./bin/www"
   },
   "dependencies": {
