--- a/front_end/package.json
+++ b/front_end/package.json
@@ -30,11 +30,11 @@
     "react": "^16.4.2",
     "react-big-calendar": "^0.23.0",
     "react-bootstrap-sweetalert": "^4.4.1",
-    "react-bootstrap-table-next": "^1.2.1",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-editor": "^1.1.0",
     "react-bootstrap-table2-filter": "^1.0.0",
     "react-bootstrap-table2-overlay": "^1.0.0",
-    "react-bootstrap-table2-paginator": "^1.0.3",
+    "react-bootstrap-table2-paginator": "^2.0.1",
     "react-bootstrap-table2-toolkit": "^1.1.1",
     "react-chartjs-2": "^2.7.2",
     "react-csv": "^1.1.2",
@@ -51,6 +51,7 @@
     "react-test-renderer": "^16.4.2",
     "react-toastify": "^4.4.1",
     "reactstrap": "^6.4.0",
+    "save": "^2.4.0",
     "simple-line-icons": "^2.4.1",
     "sweetalert2": "^7.33.1",
     "sweetalert2-react-content": "^1.0.1"
